# mcp-server

./: .gitignore  .secrets.baseline  CLAUDE.md  LICENSE  README.md  pyproject.toml  tasks.py
.githooks/: pre-commit
.github/workflows/: ci.yml  publish.yml
scripts/: check-supply-chain.sh  dev-setup.sh
skill/: scantonomous.md
src/scantonomous_mcp/: __init__.py  auth.py  cli.py  client.py  server.py
src/scantonomous_mcp/tools/: ai_scans.py  findings.py  scans.py  triage.py  web_scans.py
tests/: test_ai_scans.py  test_auth.py  test_cli.py  test_client.py  test_findings.py  test_scans.py  test_server.py  test_triage.py  test_web_scans.py
