[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scantonomous-mcp"
version = "0.2.10"
description = "Scantonomous MCP server for AI agent integration"
requires-python = ">=3.13"
license = "MIT"
dependencies = [
    "mcp==1.26.0",
    "httpx==0.28.1",
    "keyring==25.7.0",
    "click==8.3.1",
]

[project.scripts]
scantonomous-mcp = "scantonomous_mcp.cli:main"

[dependency-groups]
build = [
    "invoke==2.2.1",
    "pytest==9.0.2",
    "ruff==0.15.6",
    "pyright==1.1.408",
    "bandit==1.9.4",
    "pip-audit==2.10.0",
    "detect-secrets==1.5.0",
    "pinstack==0.1.5",
    "hatchling==1.28.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/scantonomous_mcp"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "BLE", "S", "SLF", "T20", "PLC", "PLE", "PLW"]
ignore = ["S603", "S607", "E501", "PLC0415"]

[tool.ruff.lint.per-file-ignores]
"tasks.py" = ["ARG001", "S605", "T201"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]
