[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scantonomous-mcp"
version = "0.3.6"
description = "Scantonomous MCP server for AI agent integration"
requires-python = ">=3.13"
license = "MIT"
dependencies = [
    "mcp==1.26.0",
    "httpx==0.28.1",
    "keyring==25.7.0",
    "click==8.3.1",
]

[project.scripts]
scantonomous-mcp = "scantonomous_mcp.cli:main"

[dependency-groups]
build = [
    "invoke==2.2.1",
    "pytest==9.0.3",
    "ruff==0.15.6",
    "pyright==1.1.408",
    "bandit==1.9.4",
    "pip-audit==2.10.0",
    "detect-secrets==1.5.0",
    "pinstack==0.1.5",
    "hatchling==1.28.0",
]

[tool.uv]
# SCA-422: bump transitive deps past freshly-published CVEs (constraint-only;
# they stay transitive):
#   - starlette 1.3.1 — CVE-2026-54282/54283 (URL-host confusion + form-limit DoS)
#   - python-multipart 0.0.31 — CVE-2026-53538 (separator differential) +
#     CVE-2026-53540 (negative Content-Length unbounded read)
#   - cryptography 49.0.0 — GHSA-537c-gmf6-5ccf (statically-linked OpenSSL)
#   - pydantic-settings 2.14.2 — GHSA-4xgf-cpjx-pc3j (symlink dir-traversal in NestedSecretsSettingsSource)
constraint-dependencies = [
    "starlette==1.3.1",
    "python-multipart==0.0.31",
    "cryptography==49.0.0",
    "pydantic-settings==2.14.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/scantonomous_mcp"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "BLE", "S", "SLF", "T20", "PLC", "PLE", "PLW"]
ignore = ["S603", "S607", "E501", "PLC0415"]

[tool.ruff.lint.per-file-ignores]
"tasks.py" = ["ARG001", "S605", "T201"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]
